# swami

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  README.md  TODO.tasks  azure-pipelines.yml  config.h.cmake  swami.anjuta  swami.desktop
libinstpatch/: AUTHORS  CMakeLists.txt  COPYING  CVS-HOWTO  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO.tasks  acinclude.m4  autogen.sh  config.h.cmake  configure.ac  libinstpatch-1.0.pc.in
libinstpatch/cmake/: DefaultDirs.cmake  FindGObjectIntrospection.cmake  GObjectIntrospectionMacros.cmake  Makefile.am  UseGtkDoc.cmake
libinstpatch/docs/: CMakeLists.txt  Makefile.am
libinstpatch/docs/reference/: CMakeLists.txt  Makefile.am  libinstpatch-docs.sgml  libinstpatch-docs.xml  libinstpatch-sections.txt  libinstpatch.types
libinstpatch/examples/: Makefile.am  create_sf2.c  create_sf2.py  split_sfont.c
libinstpatch/libinstpatch/: CMakeLists.txt  IpatchBase.c  IpatchBase.h  IpatchContainer.c  IpatchContainer.h  IpatchContainer_notify.c  IpatchConvert_DLS2.c  IpatchConvert_DLS2.h  IpatchConvert_Gig.c  IpatchConvert_Gig.h  IpatchConvert_SF2.c  IpatchConvert_SF2.h  IpatchConvert_SLI.c  IpatchConvert_SLI.h  IpatchConverter.c  IpatchConverter.h  IpatchConverterSF2VoiceCache.c  IpatchConverterSF2VoiceCache.h  IpatchConverter_priv.h  IpatchDLS2.c  IpatchDLS2.h  IpatchDLS2Conn.c  IpatchDLS2Conn.h  IpatchDLS2Info.c  IpatchDLS2Info.h  IpatchDLS2Inst.c  IpatchDLS2Inst.h  IpatchDLS2Param_tables.c  IpatchDLS2Region.c  IpatchDLS2Region.h  IpatchDLS2Sample.c  IpatchDLS2Sample.h  IpatchDLSFile.c  IpatchDLSFile.h  IpatchDLSFile_priv.h  IpatchDLSReader.c  IpatchDLSReader.h  IpatchDLSWriter.c  IpatchDLSWriter.h  IpatchFile.c  (+172 more)
libinstpatch/m4/: ChangeLog  Makefile.am
libinstpatch/po/: ChangeLog  POTFILES.in
libinstpatch/python/: CMakeLists.txt  Makefile.am  ipatch-types.defs  ipatch.defs  ipatch.override  ipatchmodule.c  test.py
libinstpatch/tests/: Converter.py  Makefile.am  SF2.py  SampleTransform.py  TODO  Test.py  sample_list_test.c  sample_test.c
libinstpatch/utils/: CMakeLists.txt  Makefile.am  ipatch_convert.c  riff_dump.c
src/libswami/: CMakeLists.txt  SwamiContainer.c  SwamiContainer.h  SwamiControl.c  SwamiControl.h  SwamiControlEvent.c  SwamiControlEvent.h  SwamiControlFunc.c  SwamiControlFunc.h  SwamiControlHub.c  SwamiControlHub.h  SwamiControlMidi.c  SwamiControlMidi.h  SwamiControlProp.c  SwamiControlProp.h  SwamiControlQueue.c  SwamiControlQueue.h  SwamiControlValue.c  SwamiControlValue.h  SwamiEvent_ipatch.c  SwamiEvent_ipatch.h  SwamiLock.c  SwamiLock.h  SwamiLog.c  SwamiLog.h  SwamiLoopFinder.c  SwamiLoopFinder.h  SwamiLoopResults.c  SwamiLoopResults.h  SwamiMidiDevice.c  SwamiMidiDevice.h  SwamiMidiEvent.c  SwamiMidiEvent.h  SwamiObject.c  SwamiObject.h  SwamiParam.c  SwamiParam.h  SwamiPlugin.c  SwamiPlugin.h  SwamiPropTree.c  (+14 more)
src/plugins/: CMakeLists.txt  Makefile.am  fftune.c  fftune.def  fftune.h  fftune_gui.c  fftune_gui.h  fftune_i18n.h  fluidsynth.c  fluidsynth_gui.c  fluidsynth_gui.def  fluidsynth_i18n.h
src/swamigui/: CMakeLists.txt  Makefile.am  SwamiguiBar.c  SwamiguiBar.h  SwamiguiBarPtr.c  SwamiguiBarPtr.h  SwamiguiCanvasMod.c  SwamiguiCanvasMod.h  SwamiguiComboEntry.c  SwamiguiComboEntry.h  SwamiguiControl.c  SwamiguiControl.h  SwamiguiControlAdj.c  SwamiguiControlAdj.h  SwamiguiControlMidiKey.c  SwamiguiControlMidiKey.h  SwamiguiControl_widgets.c  SwamiguiDnd.h  SwamiguiItemMenu.c  SwamiguiItemMenu.h  SwamiguiItemMenu_actions.c  SwamiguiKnob.c  SwamiguiKnob.h  SwamiguiLoopFinder.c  SwamiguiLoopFinder.h  SwamiguiMenu.c  SwamiguiMenu.h  SwamiguiModEdit.c  SwamiguiModEdit.h  SwamiguiMultiSave.c  SwamiguiMultiSave.h  SwamiguiNoteSelector.c  SwamiguiNoteSelector.h  SwamiguiPanel.c  SwamiguiPanel.h  SwamiguiPanelSF2Gen.c  SwamiguiPanelSF2Gen.h  SwamiguiPanelSF2GenEnv.c  SwamiguiPanelSF2GenEnv.h  SwamiguiPanelSF2GenMisc.c  (+52 more)
src/swamigui/tools/: cdump.c
src/swamigui/widgets/: Makefile.am  combo-box.c  combo-box.h  icon-combo.c  icon-combo.h
swami/: AUTHORS  CMakeLists.txt  COPYING  CVS-HOWTO  HACKERS  INSTALL  Makefile.am  README  README.OSX  acinclude.m4  autogen.sh  configure.ac  swami.appdata.xml  swami.desktop  swami.xml
swami/cmake/: DefaultDirs.cmake
swami/docs/manual/: Swami-Manual.sgml
swami/package/: Makefile.am
swami/package/osxbundle/: Info.plist  Info.plist.in  swami.bundle  swami.icns
swami/package/win32/: swami.nsi
swami/po/: Makevars  POTFILES.in
swami/src/: CMakeLists.txt  Makefile.am
swami/src/libswami/: CMakeLists.txt  Makefile.am  SwamiContainer.c  SwamiContainer.h  SwamiControl.c  SwamiControl.h  SwamiControlEvent.c  SwamiControlEvent.h  SwamiControlFunc.c  SwamiControlFunc.h  SwamiControlHub.c  SwamiControlHub.h  SwamiControlMidi.c  SwamiControlMidi.h  SwamiControlProp.c  SwamiControlProp.h  SwamiControlQueue.c  SwamiControlQueue.h  SwamiControlValue.c  SwamiControlValue.h  SwamiEvent_ipatch.c  SwamiEvent_ipatch.h  SwamiLock.c  SwamiLock.h  SwamiLog.c  SwamiLog.h  SwamiLoopFinder.c  SwamiLoopFinder.h  SwamiLoopResults.c  SwamiLoopResults.h  SwamiMidiDevice.c  SwamiMidiDevice.h  SwamiMidiEvent.c  SwamiMidiEvent.h  SwamiObject.c  SwamiObject.h  SwamiParam.c  SwamiParam.h  SwamiPlugin.c  SwamiPlugin.h  (+14 more)
swami/src/plugins/: CMakeLists.txt  Makefile.am  fftune.c  fftune.h  fftune_gui.c  fftune_gui.h  fluidsynth.c  fluidsynth.def  fluidsynth.glade  fluidsynth.gladep  fluidsynth.ui  fluidsynth_gui.c  fluidsynth_gui_i18n.h  fluidsynth_i18n.c
swami/src/python/: Makefile.am  swami.defs  swami.override  swami_missing.c  swami_missing.h  swamigui.defs  swamigui.override  swamigui_missing.c  swamigui_missing.h  swamiguimodule.c  swamimodule.c
swami/src/swamigui/: CMakeLists.txt  Makefile.am  SwamiguiBar.c  SwamiguiBar.h  SwamiguiBarPtr.c  SwamiguiBarPtr.h  SwamiguiCanvasMod.c  SwamiguiCanvasMod.h  SwamiguiComboEntry.c  SwamiguiComboEntry.h  SwamiguiControl.c  SwamiguiControl.h  SwamiguiControlAdj.c  SwamiguiControlAdj.h  SwamiguiControlMidiKey.c  SwamiguiControlMidiKey.h  SwamiguiControl_widgets.c  SwamiguiDnd.h  SwamiguiItemMenu.c  SwamiguiItemMenu.h  SwamiguiKnob.c  (+72 more)
(+100 files in other folders)
